--- a/notebooks/investigator.ipynb
+++ b/notebooks/investigator.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -83,15 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def process_data(names, use_padding = False, resize = False):\n",
-    "    images = []\n",
-    "    masks = []\n",
+    "def process_data(names, prefix = '', use_padding = False, resize = False, store = False):\n",
+    "    im_w_mask_list = []\n",
     "    \n",
     "    for name in tqdm_notebook(names):\n",
     "        im = plt.imread(path + name + \"/images/\" + name + \".png\")[:,:,:3]\n",
@@ -115,35 +114,27 @@
     "            im,mask = mirror(im, mask)\n",
     "        \n",
     "        \n",
-    "        im_w_mask = (np.stack((im, mask), 2)*255).astype('uint8')\n",
+    "        im_w_mask = (np.stack((im*255, mask), 2)).astype('uint8')\n",
     "        #print(im_w_mask.shape)\n",
-    "        np.save(\"../data/stage_1_processed/train/\" + \"train_\" + name, im_w_mask)\n",
-    "        #images.append(im)\n",
+    "        np.save(\"../data/stage_1_processed/\" + prefix + \"/\" + prefix + \"_\" + name, im_w_mask)\n",
+    "        \n",
+    "        if store:\n",
+    "            im_w_mask_list.append(im_w_mask)\n",
     "        #masks.append(mask)\n",
     "        \n",
     "    \n",
-    "    #return images, masks\n"
+    "    return im_w_mask_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im_w_mask = np.stack((train_ims[0], train_masks[0]), 2)\n",
-    "g = p.keras_generator_from_array((np.expand_dims(im_w_mask, 0)*255).astype('uint8'),np.ones(1), 1, )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5306cdce0c004a0e8b487cef948f6752",
+       "model_id": "f5c08500668d4cbe99eff07fe58588c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,8 +154,120 @@
     }
    ],
    "source": [
-    "process_data(train_names[:], False)"
+    "im_w_mask_list = process_data(val_names[:], prefix='val')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_data = np.load(\"../data/stage_1_processed/val/val_08151b19806eebd58e5acec7e138dbfbb1761f41a1ab9620466584ecc7d5fada.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  6,  6, ..., 24, 23, 24],\n",
+       "       [ 5,  6,  6, ..., 24, 23, 23],\n",
+       "       [ 6,  7,  7, ..., 23, 22, 23],\n",
+       "       ...,\n",
+       "       [32, 35, 32, ...,  6,  7,  7],\n",
+       "       [34, 35, 33, ...,  6,  6,  7],\n",
+       "       [35, 36, 34, ...,  7,  7,  7]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data[:,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQYAAAD8CAYAAACVSwr3AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAD71JREFUeJzt3W+oZHd9x/H3t2uykmhJNv/YbJYm\nygYaS7qGSwykSEqomyyF1QeRpGC2ElgfbEDBQld9oE8EW6pSoQ2sJLgp1hiqkqWkXeOiSB+ouYZ1\n869J1rhNbu6y6z80NBCT+O2DObeZvb+5d878OTNn5r5fcJm5vzln5rtn7+8zv/Obc85EZiJJ3f5g\n2gVIah+DQVLBYJBUMBgkFQwGSQWDQVKhsWCIiFsi4pmIOBERB5p6HUnjF00cxxARm4Bngb8AloBH\ngTsy86mxv5iksWtqxHA9cCIzn8/M3wEPAHsaei1JY/aWhp53G/Bi1+9LwHvWWvjc2Jxv5fyGSpk9\nV1/7ysDrPHv8vAYq0Tx5mV//IjMvqbNsU8EQPdrO2meJiH3APoC3ch7viZsbKmX2HDlybOB1dl2+\ns4FKNE++k//2P3WXbWpXYgnY3vX7FcBy9wKZeTAzFzJz4Rw2N1TGxmAoaNyaGjE8CuyIiKuAl4Db\ngb9q6LXmTndHP7Jcjh4MAjWtkWDIzNcj4m7gCLAJuC8zn2ziteadIaBpaGrEQGY+DDzc1PNLao5H\nPkoqGAySCgaDpILBIKlgMEgqGAySCgaDpILBIKlgMEgqGAySCgaDpILBIKlgMEgqGAySCgaDpILB\nIKlgMEgqGAySCgaDpILBIKlgMEgqGAySCgaDpILBIKlgMEgqGAySCgaDpILBIKlgMEgqGAySCgaD\npILBIKlgMEgqGAySCm8ZZeWIOAm8DLwBvJ6ZCxGxBfg6cCVwEvhgZv56tDIlTdI4Rgx/npk7M3Oh\n+v0AcDQzdwBHq98lzZAmdiX2AIeq+4eA9zfwGpIaNGowJPDtiPhxROyr2i7LzFMA1e2lvVaMiH0R\nsRgRi6/x6ohlSBqnkeYYgBszczkiLgUeiYj/rrtiZh4EDgL8YWzJEeuQNEYjjRgyc7m6PQN8C7ge\nOB0RWwGq2zOjFilpsoYOhog4PyLevnIfeB/wBHAY2Fstthd4aNQiJU3WKLsSlwHfioiV5/nXzPzP\niHgUeDAi7gJeAG4bvUxJkzR0MGTm88Cf9mj/JXDzKEVJmi6PfJRUMBgkFQwGSQWDQVLBYJBUMBgk\nFQwGSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBU\nMBgkFQwGSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBUGPrbrmfBkeVj6z6+6/KdE6pEmi1zGQz9AmH1\ncgaEdDZ3JagfJNJGMXfBMGwnNxykN/XdlYiI+4C/BM5k5p9UbVuArwNXAieBD2bmryMigH8EdgOv\nAH+dmY8NUtBaHdThvjQ5dUYMXwFuWdV2ADiamTuAo9XvALcCO6qffcA9dQs5snxs3Xftfo+vLDOK\nOq8hbQR9gyEzvw/8alXzHuBQdf8Q8P6u9vuz4wfABRGxtd9rXH3tK7ULXqvjjrNDGw7a6IadY7gs\nM08BVLeXVu3bgBe7lluq2iTNkHFPPkaPtuy5YMS+iFiMiMWf//KNkV7Ud3hpvIYNhtMruwjV7Zmq\nfQnY3rXcFcByryfIzIOZuZCZC5dctGmgFzcIpGYNGwyHgb3V/b3AQ13td0bHDcBvVnY5JM2OOh9X\nfg24Cbg4IpaATwOfAx6MiLuAF4DbqsUfpvNR5Qk6H1d+uIGaJTWsbzBk5h1rPHRzj2UT2D9qUZKm\nayaPfPRgJ6lZMxcMvULBoJDGqxXB8Ozx80Z+jnGGg0Gjja4VwQCdztivQ476uKR6Wnc9hlE798r6\nwxzrYLBIHa0ZMYzbIJ28zmhF2khaN2IYp9Wd3SMmpXrmOhhWc1Qg1bOhgkHD8wI6G8vczjFoPOpc\nQEfzx2CQVDAYJBUMBkkFg0FSwWDQuvzUYWMyGNTXeuFgcMwnj2NQLQbAxuKIQVLBYJBUMBgkFQwG\nSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBUMBgkFQwGSQWDQVLBYJBU8LTrBnnJdc0qg2GM6l5KffVy\nBoXaxl2JMRnl+xX8bga1Td9giIj7IuJMRDzR1faZiHgpIo5VP7u7HvtERJyIiGciYldThc8bw0Ft\nUmfE8BXglh7tX8zMndXPwwARcQ1wO/Cuap1/johN4ypW0mT0DYbM/D7wq5rPtwd4IDNfzcyfASeA\n60eoT9IUjDLHcHdEHK92NS6s2rYBL3Yts1S1FSJiX0QsRsTia7w6QhmSxm3YYLgHeCewEzgFfL5q\njx7LZq8nyMyDmbmQmQvnsHnIMuaL8wxqi6GCITNPZ+Ybmfl74Mu8ubuwBGzvWvQKYHm0EiVN2lDB\nEBFbu379ALDyicVh4PaI2BwRVwE7gB+NVqKkSet7gFNEfA24Cbg4IpaATwM3RcROOrsJJ4GPAGTm\nkxHxIPAU8DqwPzPfaKZ0SU3pGwyZeUeP5nvXWf6zwGdHKWqj8ghItYVHPo6JnVrzxGAYI8NB88Jg\nGLNhw8FQUZsYDA0YtJMbCmobT7seUq+Dkbo7+K7Ld655enV3u6GgNjIYBrTe0Ykrj6109n6d3lBQ\nW7kr0YB+hzbvunynoaBWMxhqOrJ8bKBzGTzvQbPMYKjBTq6NxmCQVDAYJBUMhga5C6JZZTA0zHDQ\nLDIYJsBw0KwxGPqwU2sjMhgkFQyGCfAoR80ag6GPUTq1hz5rVhkMNQzTwQ0EzTLPrhzAWp199VmV\n0qwzGMbAQNC8cVdCUsFgkFQwGCQVDAZJBYNBUsFgkFQwGCQVDAZJBYNBUsFgkFQwGCQVDAZJhb7B\nEBHbI+K7EfF0RDwZER+t2rdExCMR8Vx1e2HVHhHxpYg4ERHHI+K6pv8RksarzojhdeDjmfnHwA3A\n/oi4BjgAHM3MHcDR6neAW4Ed1c8+4J6xVy2pUX1Pu87MU8Cp6v7LEfE0sA3YA9xULXYI+B7wt1X7\n/ZmZwA8i4oKI2Fo9z0yqc0HYXqder7Wep2mr7QaaY4iIK4F3Az8ELlvp7NXtpdVi24AXu1Zbqtpm\nUhNXifbK02q72sEQEW8DvgF8LDN/u96iPdqyx/Pti4jFiFh8jVfrljFRo3y7db91DQe1Wa1giIhz\n6ITCVzPzm1Xz6YjYWj2+FThTtS8B27tWvwJYXv2cmXkwMxcyc+EcNg9bf2OG6bgr69jpNevqfCoR\nwL3A05n5ha6HDgN7q/t7gYe62u+sPp24AfjNLM8vDGqUUYbUFnWu+Xgj8CHg8YhY+Uv+JPA54MGI\nuAt4AbiteuxhYDdwAngF+PBYK54AO6w2ujqfSvwXvecNAG7usXwC+0esayi9OnTbPwE4snys9TVq\n42nFkY9XX/vKyO/Sa63vu780uFYEw4phJ/za8gmA3zyledGqYBhUm0YDBoLmSeuCoQ2d3U6ujc5v\nomrArst31g44Q0iDmsSh9q0bMUC9eYOmTWK+wFDQoNbrF+PsN60Mhjap03l7LdNvPUNBg5rkm+WG\nCIZRO+F6o4dhnttQUJPGESAzPcdQZ19+nJ1w0OcaZK5BWs+gf0ejHjjX2hFD3X/Uesu14Z159Wij\nDTVJ/bRyxDDMOzO8mapt7HxtrElaSyuDYVh2Pmk8WrcrYeeWpq91wSBp+loRDM8eP88TkKR1DDvv\nNqxWBIOk/sbxSV1dczX52M1Lt2serXdszNyfKzGqSR1PLk3DMIfgD2puRwz9eEk1zbKm/3bnbsQw\n6FWaHT1IpbkKBju5NB5zEwyjhIKBIp1tpucYxtWhnWuQztaKEcM4Lh8/LENBKrVqxDDJsyMNBGlt\nrRgxrNb06MFQkNbXqhFD0wwEqZ7WBsO4DkAyDKTBtTYY6rDTS81o5RzDinHPNXiko1TPTI8Y+un3\nDdiOOKTe5jIY6o4KDAipt1bvSthhpelobTAMGwrDzCE47yCdrW8wRMT2iPhuRDwdEU9GxEer9s9E\nxEsRcaz62d21zici4kREPBMRu5r8B4yL4SC9qc4cw+vAxzPzsYh4O/DjiHikeuyLmfkP3QtHxDXA\n7cC7gMuB70TE1Zn5Rt2iJjlakFTqO2LIzFOZ+Vh1/2XgaWDbOqvsAR7IzFcz82fACeD6ugVNc17B\nYJE6BppjiIgrgXcDP6ya7o6I4xFxX0RcWLVtA17sWm2JHkESEfsiYjEiFn/+y9qDCUkTUDsYIuJt\nwDeAj2Xmb4F7gHcCO4FTwOdXFu2xehYNmQczcyEzFy65aFNrvlfCUYNU8ziGiDiHTih8NTO/CZCZ\np7se/zLw79WvS8D2rtWvAJbXe/5nj5/He3rFiaRCnTevxr9wJiICuBd4OjO/0NW+tWuxDwBPVPcP\nA7dHxOaIuArYAfxopColDWTUw//rjBhuBD4EPB4RK6/0SeCOiNhJZzfhJPARgMx8MiIeBJ6i84nG\n/kE+kZC0tkE7+7BH90Zmsfs/cRHxc+B/gV9Mu5YaLmY26oTZqdU6x69XrX+UmZfUWbkVwQAQEYuZ\nuTDtOvqZlTphdmq1zvEbtdbWHhItaXoMBkmFNgXDwWkXUNOs1AmzU6t1jt9ItbZmjkFSe7RpxCCp\nJaYeDBFxS3V69omIODDtelaLiJMR8Xh1avli1bYlIh6JiOeq2wv7PU8Ddd0XEWci4omutp51RceX\nqm18PCKua0GtrTttf51LDLRqu07kUgiZObUfYBPwU+AdwLnAT4BrpllTjxpPAhevavt74EB1/wDw\nd1Oo673AdcAT/eoCdgP/Qec8lhuAH7ag1s8Af9Nj2Wuqv4PNwFXV38emCdW5Fbiuuv924NmqnlZt\n13XqHNs2nfaI4XrgRGY+n5m/Ax6gc9p22+0BDlX3DwHvn3QBmfl94Fermteqaw9wf3b8ALhg1SHt\njVqj1rWMdNr+KHLtSwy0aruuU+daBt6m0w6GWqdoT1kC346IH0fEvqrtssw8BZ3/JODSqVV3trXq\naut2Hvq0/aatusRAa7frOC+F0G3awVDrFO0puzEzrwNuBfZHxHunXdAQ2ridRzptv0k9LjGw5qI9\n2iZW67gvhdBt2sEw8Cnak5aZy9XtGeBbdIZgp1eGjNXtmelVeJa16mrdds7M05n5Rmb+Hvgybw5t\np1prr0sM0MLtutalEMa1TacdDI8COyLiqog4l861Ig9Puab/FxHnR+c6l0TE+cD76JxefhjYWy22\nF3hoOhUW1qrrMHBnNYt+A/CblaHxtLTxtP21LjFAy7brWnWOdZtOYha1zwzrbjqzqj8FPjXtelbV\n9g46s7k/AZ5cqQ+4CDgKPFfdbplCbV+jM1x8jc47wl1r1UVnKPlP1TZ+HFhoQa3/UtVyvPrD3dq1\n/KeqWp8Bbp1gnX9GZ4h9HDhW/exu23Zdp86xbVOPfJRUmPauhKQWMhgkFQwGSQWDQVLBYJBUMBgk\nFQwGSQWDQVLh/wCzXOaAunR3MgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7ffbaa3eb7b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(im_w_mask_list[0][:,:, 1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -554,7 +657,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "im_w_mask = np.stack((train_ims[0], train_masks[0]), 2)\n",
@@ -593,7 +698,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n = next(g)"
@@ -786,7 +893,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b = np.vstack((a,a))"
