unet moves to ipython directly

--- a/notebooks/Unet.ipynb
+++ b/notebooks/Unet.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anton/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -74,8 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_names = os.listdir(path + \"train\")\n",
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -96,8 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_data = [np.concatenate((x,\n",
@@ -107,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -116,7 +129,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAksAAAJCCAYAAADQsoPKAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGkhJREFUeJzt3V+IrGedJ/Dvbz2uF6Og4hqySXYV\nycLEm+g5uILL4lzsGL05CusSFzSIy/EiAQVvojd6ORerguxOIGIwgqMbUDEXMjNuENwb/+RI0MSM\n62EMekxIGFxUVnBJfPaiq2PZ6f519en681bX5wNNd7/nraqn+q03+b7f96m3aowRAAAO9882PQAA\ngCkTlgAAGsISAEBDWAIAaAhLAAANYQkAoCEsAQA0VhaWquq2qvpJVV2pqrtX9TgAAKtUq7goZVW9\nKMn/TvIfklxN8v0k7xlj/HjpDwYAsELnVnS/b0pyZYzxj0lSVV9OcjHJoWGpqlxGfMecP38+SXL5\n8uUNj2Q1lvH8pvI3WnQcUxnvupylbXyUaxnfOp7T1P9ubJV/GmP8i+NWWlWz9B+T3DbG+C+z39+b\n5N+OMe6aW+dSkkuzX88vfRBM2v7rrqo2PJLVWMbzm8rfaNFxTGW863KWtvFRrmV863hOU/+7sVUu\njzEuHLfSqpqlw17Bf5LKxhj3Jrk30Sztsvmwvu3/4VvGgceUP6vR/6A4iYOv5WW8bqa8f3C2rWqC\n99UkN839fmOSJ1f0WAAAK7OqZun7SW6uqtcm+WWS25P85xU9Flto/yjzLBwpHvYcFj2K7p7/VBqc\nk24rDdTZc5JtenCd/dsuc1/32mLdVhKWxhjPVtVdSf4uyYuS3DfGeGwVjwUAsEormeB94kGYs7Sz\nTtPKbNoy5mRsUwuzyxO9V9UAHnW/U/nbrWLeEUzMQhO8XcEbAKCxqjlLsJD5I9UptJyLWGajxLSt\nuvk8bn7PVJqcqYwDNkWzBADQEJYAABpOwzE5UzsFcZRlnH6b+nNkz7q208HLNGzLvgBnnWYJAKCh\nWWIyzvJR9S42Smfpo2zWbdP7gjcgwJ/SLAEANDRLTM6mj6qXaRcbpcM+HmXbtuFUmpWj9oVu3dPY\nxdcrLEKzBADQ0CzxAqc5ql7FBfuOOqpe91HvVP4u22IbLzh60FS2WzeOZTSwm963YOo0SwAADc0S\nS/kwz1W2P8d9JMQitzmJ41qQXTvqXmYrNNW5S9vafCWHzxHrrHreE5xFmiUAgIZmaces6qhy0fZn\nFU3TIo+77MfZRct4fUzlHY7LaFOn6iSv/bPwfGEdNEsAAA3N0o5Y97tdjmuaVvX4jpSXY1VzeDbd\nMC1zP1jlPKdrGZfXPqyOZgkAoKFZOuOmcv2UTTcKXLtVbKN1XkPrsAbouPvf1Lyf4+bc2V9gMzRL\nAAANYQkAoOE03I6YSn3fnX6ZyhhXYVtOO6774ownueDoqi87cdjjrnt7HfV4u7a/wNRolgAAGpql\nM2rqH99w0o9o2FbbMrF9043KUY87P66TTno+yWtrKs//KIftL1N9LcFZpFkCAGhols64bTrqPMtH\nylNtmLalUTnMoh9tc5LnNLXnf9D8+M56KwtTolkCAGholtioXTtSnkrDNPVGaRHbOOZVmEpLCWeZ\nZgkAoKFZYnJ24Uj5uI/7OGzd0/DxGYfb5jZzV95RClOgWQIAaGiWzphtPsrcxSPlZbzba1mPt8v8\nXYCOZgkAoKFZOqMcKW8/25CT2IW5frApmiUAgIawBOy8McbWzpWrKm0SrJiwBADQEJYAABrCErCz\nDp7C2ubTcfvOwnOAqRGWAAAaLh1wRm3j24gdDbMpZ+GCqGfhOcBUaZYAABqapTPmLBxdblMbBsDZ\np1kCAGgISwAHeEcZME9YAgBomLN0xk39XXGO3pmSbZ7zt41jhm2hWQIAaGiWzqiDR8hTa5gOOwqe\nythgm9mPYPk0SwAADc3SGTe1hulgo+QoGICp0ywBADQ0SzviqIZp/t9WSaPENtp0E7sI74KD1dMs\nAQA0hCUAgIbTcDvmsIvureIU2VGnBqZ8OgP2bfq09SKc2ob10SwBADQ0SzvqsKPQw46iu9ssMrHU\n0S7brGtiN/HadjFX2AzNEgBAQ7PE8446Qj2ucepuC2fB/Ot7nRd4tc/BNGiWAAAamiWO5QgW/qh7\np9xJ7+Mg7yKFadIsAQA0NEsA1+CkbU93bbPT3jewWpolAICGZglgDbRFsL00SwAADWEJAKAhLAEA\nNIQlAICGsAQA0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBD\nWAIAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQl\nAICGsAQA0BCWAAAawhIAQOPcaW5cVU8k+W2S55I8O8a4UFWvTPI/krwmyRNJ/tMY4/+cbpgAAJux\njGbpL8YYt44xLsx+vzvJQ2OMm5M8NPsdAGArreI03MUk989+vj/JO1fwGAAAa3HasDSS/H1VXa6q\nS7Nl140xnkqS2fdXH3bDqrpUVQ9X1cOnHAMAwMqcas5SkreMMZ6sqlcn+WZV/cOiNxxj3Jvk3iSp\nqnHKcQAArMSpmqUxxpOz788k+VqSNyV5uqquT5LZ92dOO0gAgE255rBUVX9WVS/b/znJXyZ5NMmD\nSe6YrXZHkq+fdpAAAJtymtNw1yX5WlXt38/fjDH+tqq+n+SBqvpAkp8neffphwkAsBk1xuanC5mz\nBABswOW5Sx8dyRW8AQAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANCYRFg6f/58xhgv\n+AIA2LRJhCUAgKma5MeddGOafRYdAMBp+bgTAIDTOrfpARzmYHs03zQdbJ00TQDAKmmWAAAak2yW\nDjqsPdpvmPa/a5gAgFXQLAEANIQlAIDG1oalqvqTU28uZAkArMLWhiUAgHXY+rCkYQIAVmnrwxIA\nwCqdmbCkYQIAVuHMhCUAgFU4c2FJwwQALNOZC0sAAMt0ZsPSwYYJAOBanNmwBACwDFvxQbrLMD9v\nSeMEACxKswQA0DjzYcncJQDgNM58WAIAOI2dDEuuvQQALGonwxIAwKKEJQCAxs5cOuDgR6AAACxC\nswQA0BCWAAAawhIAQENYAgBoCEsAAI2dDksuTgkAHGenwxIAwHF2Miz5cF0AYFE7GZYAABa1M1fw\nnmeeEgCwKM0SAEBjJ5ulfeYtAQDH0SwBADSEJQCAhrAEANAQlgAAGjszwdvlAgCAa6FZAgBo7Eyz\nNM8lAwCARWmWAAAaZ75ZMlcJADgNzRIAQGMSYen8+fMZYzz/tQwH76uqnv8CAFjUJMISAMBU1RTm\n9FTVSI6eX7RIG3Sa2wIAO+nyGOPCcStplgAAGpN6N9zBFmi/LTpJ+6VJAgCWSbMEANCYVLN0kJYI\nANg0zRIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIAaAhLAAANYQkA\noCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCWAAAa\nwhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEDj2LBUVfdV1TNV9ejcsldW\n1Ter6qez76+YLa+q+kxVXamqH1bVG1c5eACAVVukWfp8ktsOLLs7yUNjjJuTPDT7PUnenuTm2del\nJPcsZ5gAAJtxbFgaY3w7ya8OLL6Y5P7Zz/cneefc8i+MPd9J8vKqun5ZgwUAWLdrnbN03RjjqSSZ\nfX/1bPkNSX4xt97V2TIAgK10bsn3V4csG4euWHUpe6fqAAAm61qbpaf3T6/Nvj8zW341yU1z692Y\n5MnD7mCMce8Y48IY48I1jgEAYOWuNSw9mOSO2c93JPn63PL3zd4V9+Ykv94/XQcAsI2OPQ1XVV9K\n8tYkr6qqq0k+nuSvkjxQVR9I8vMk756t/o0k70hyJcnvkrx/BWMGAFibGuPQKUXrHUTV5gcBAOya\ny4tMB3IFbwCAhrAEANAQlgAAGsISAEBDWAIAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrC\nEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCWAAAawhIAQENYAgBonNv0AIDtMsa45ttW\n1RJHArAemiUAgIZmCWgd1SSdpCXav4+D96VpAraBZgkAoKFZAl7gsDbpNC3QwdsebJo0TMCUaZYA\nABqaJeB5y26UjrJ/nxomYBtolgAAGsISAEDDaThgY2/pdzoO2AaaJQCAhmYJeN6mGh0NEzBlmiUA\ngIZmCXbYaT4UdxUONkwAU6BZAgBoaJYAc4MAGpolAICGsAQA0BCWAAAawhIAQENYAgBoCEsAAA1h\nCQCgISwBGWO4ajbAEYQlAICGsAQA0PBxJ7DDpvbBtVMZB8A8zRIAQEOzBGzcwUbJB/sCU6JZAgBo\naJaA5+03POtqdjRKwDbQLAEANDRLwAveFTff+Kyi7dEoAdtEswQA0NAsAc877LpLy2yBNErANtIs\nAQA0NEvACxzW+Bw2n2mZ9w8wVZolAICGZglYiDYI2FWaJQCAhrAEANAQlgAAGsISAEBDWAIAaAhL\nAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA\n0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIAaAhLAAAN\nYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgcG5aq6r6qeqaqHp1b9omq+mVVPTL7esfc\nv320qq5U1U+q6m2rGjgAwDos0ix9Pslthyz/9Bjj1tnXN5Kkqm5JcnuS189u89dV9aJlDRYAYN2O\nDUtjjG8n+dWC93cxyZfHGL8fY/wsyZUkbzrF+AAANuo0c5buqqofzk7TvWK27IYkv5hb5+psGQDA\nVrrWsHRPktcluTXJU0k+OVteh6w7DruDqrpUVQ9X1cPXOAYAgJW7prA0xnh6jPHcGOMPST6bP55q\nu5rkprlVb0zy5BH3ce8Y48IY48K1jAEAYB2uKSxV1fVzv74ryf475R5McntVvaSqXpvk5iTfO90Q\nAQA259xxK1TVl5K8Ncmrqupqko8neWtV3Zq9U2xPJPlgkowxHquqB5L8OMmzSe4cYzy3mqEDAKxe\njXHolKL1DqJq84MAAHbN5UWmA7mCNwBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCWAAAa\nwhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIAaAhLAAANYQkAoCEs\nAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCWAAAawhIA\nQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIAaAhLAAANYQkAoCEsAQA0\nJhGWzp8/nzHG818AAFMxibAEADBVNYUmp6pGkhe0SlW1kfEAADvh8hjjwnEraZYAABqTCktVpU0C\nACZlUmEJAGBqJh2WvDsOANi0SYclAIBNm2RYMncJAJiKSYYlAICpOLfpASxift6SxgkAWCfNEgBA\nY9JhydwlAGDTJh2WAAA2TVgCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCWAAAawhIAQENYAgBo\nTPqDdOc/QBcAYBM0SwAAjUk3S/t8mC4AsCmaJQCAxiSbJXOVAICp0CwBADQm2SztM1cJANg0zRIA\nQENYAgBoTOo0nIndAMDUaJYAABqTCEvnz5//k1apqkzuBgAmYRJhCQBgqmoK84SqavODAAB2zeUx\nxoXjVtIsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICGsAQA0BCW\nAAAawhIAQENYAgBoCEsAAI1jw1JV3VRV36qqx6vqsar60Gz5K6vqm1X109n3V8yWV1V9pqquVNUP\nq+qNq34SAACrskiz9GySj4wx/jzJm5PcWVW3JLk7yUNjjJuTPDT7PUnenuTm2delJPcsfdQAAGty\nbFgaYzw1xvjB7OffJnk8yQ1JLia5f7ba/UneOfv5YpIvjD3fSfLyqrp+6SMHAFiDE81ZqqrXJHlD\nku8muW6M8VSyF6iSvHq22g1JfjF3s6uzZQAAW+fcoitW1UuTfCXJh8cYv6mqI1c9ZNk45P4uZe80\nHQDAZC3ULFXVi7MXlL44xvjqbPHT+6fXZt+fmS2/muSmuZvfmOTJg/c5xrh3jHFhjHHhWgcPALBq\ni7wbrpJ8LsnjY4xPzf3Tg0numP18R5Kvzy1/3+xdcW9O8uv903UAANumxnjBGbI/XaHq3yX5X0l+\nlOQPs8Ufy968pQeS/KskP0/y7jHGr2bh6r8luS3J75K8f4zx8DGP0Q8CAGD5Li9yhuvYsLQOwhIA\nsAELhSVX8AYAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAh\nLAEANIQlAICGsAQA0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsIS\nAEBDWAIAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEA\nNIQlAICGsAQA0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBD\nWAIAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQl\nAICGsAQA0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIA\naAhLAAANYQkAoCEsAQA0hCUAgIawBADQEJYAABrCEgBAQ1gCAGgISwAADWEJAKAhLAEANIQlAICG\nsAQA0BCWAAAawhIAQENYAgBoCEsAAA1hCQCgISwBADSEJQCAhrAEANAQlgAAGsISAEBDWAIAaAhL\nAACNY8NSVd1UVd+qqser6rGq+tBs+Seq6pdV9cjs6x1zt/loVV2pqp9U1dtW+QQAAFbp3ALrPJvk\nI2OMH1TVy5Jcrqpvzv7t02OM/zq/clXdkuT2JK9P8i+T/M+q+jdjjOeWOXAAgHU4tlkaYzw1xvjB\n7OffJnk8yQ3NTS4m+fIY4/djjJ8luZLkTcsYLADAup1ozlJVvSbJG5J8d7borqr6YVXdV1WvmC27\nIckv5m52NYeEq6q6VFUPV9XDJx41AMCaLByWquqlSb6S5MNjjN8kuSfJ65LcmuSpJJ/cX/WQm48X\nLBjj3jHGhTHGhROPGgBgTRYKS1X14uwFpS+OMb6aJGOMp8cYz40x/pDks/njqbarSW6au/mNSZ5c\n3pABANZnkXfDVZLPJXl8jPGpueXXz632riSPzn5+MMntVfWSqnptkpuTfG95QwYAWJ9F3g33liTv\nTfKjqnpktuxjSd5TVbdm7xTbE0k+mCRjjMeq6oEkP87eO+nu9E44AGBb1RgvmE60/kFUbX4QAMCu\nubzI3GlX8AYAaAhLAAANYQkAoCEsAQA0hCUAgIawBADQWOQ6S+vwT0n+7+w70/aq2E7bwrbaDrbT\ndrCdtsNJt9O/XmSlSVxnKUmq6mGfEzd9ttP2sK22g+20HWyn7bCq7eQ0HABAQ1gCAGhMKSzdu+kB\nsBDbaXvYVtvBdtoOttN2WMl2msycJQCAKZpSswQAMDmTCEtVdVtV/aSqrlTV3ZseD39UVU9U1Y+q\n6pGqeni27JVV9c2q+uns+ys2Pc5dU1X3VdUzVfXo3LJDt0vt+cxs//phVb1xcyPfLUdsp09U1S9n\n+9QjVfWOuX/76Gw7/aSq3raZUe+eqrqpqr5VVY9X1WNV9aHZcvvUhDTbaeX71MbDUlW9KMl/T/L2\nJLckeU9V3bLZUXHAX4wxbp17O+bdSR4aY9yc5KHZ76zX55PcdmDZUdvl7Ulunn1dSnLPmsbI4dsp\nST4926duHWN8I0lm/927PcnrZ7f569l/H1m9Z5N8ZIzx50nenOTO2fawT03LUdspWfE+tfGwlORN\nSa6MMf5xjPH/knw5ycUNj4nexST3z36+P8k7NziWnTTG+HaSXx1YfNR2uZjkC2PPd5K8vKquX89I\nd9sR2+koF5N8eYzx+zHGz5Jcyd5/H1mxMcZTY4wfzH7+bZLHk9wQ+9SkNNvpKEvbp6YQlm5I8ou5\n36+mf/Ks10jy91V1uaouzZZdN8Z4Ktl78SZ59cZGx7yjtot9bHrump2+uW/uNLbtNAFV9Zokb0jy\n3dinJuvAdkpWvE9NISzVIcu8RW863jLGeGP2auc7q+rfb3pAnJh9bFruSfK6JLcmeSrJJ2fLbacN\nq6qXJvlKkg+PMX7TrXrIMttqTQ7ZTivfp6YQlq4muWnu9xuTPLmhsXDAGOPJ2fdnknwtexXm0/uV\n8+z7M5sbIXOO2i72sQkZYzw9xnhujPGHJJ/NH08L2E4bVFUvzt7/gL84xvjqbLF9amIO207r2Kem\nEJa+n+TmqnptVf3z7E3GenDDYyJJVf1ZVb1s/+ckf5nk0extnztmq92R5OubGSEHHLVdHkzyvtk7\neN6c5Nf7pxZYvwNzW96VvX0q2dtOt1fVS6rqtdmbPPy9dY9vF1VVJflcksfHGJ+a+yf71IQctZ3W\nsU+du7YhL88Y49mquivJ3yV5UZL7xhiPbXhY7Lkuydf2Xp85l+Rvxhh/W1XfT/JAVX0gyc+TvHuD\nY9xJVfWlJG9N8qqquprk40n+Kodvl28keUf2Jjf+Lsn71z7gHXXEdnprVd2avdMBTyT5YJKMMR6r\nqgeS/Dh77/q5c4zx3CbGvYPekuS9SX5UVY/Mln0s9qmpOWo7vWfV+5QreAMANKZwGg4AYLKEJQCA\nhrAEANAQlgAAGsISAEBDWAIAaAhLAAANYQkAoPH/AefhnUZxSCs2AAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fbb8199bfd0>"
+       "<matplotlib.figure.Figure at 0x7f956e5008d0>"
       ]
      },
      "metadata": {},
@@ -156,18 +169,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unet_kkweon = reload(unet_kkweon)"
+    "def conv_conv_pool(input_,\n",
+    "                   n_filters,\n",
+    "                   training,\n",
+    "                   flags,\n",
+    "                   name,\n",
+    "                   pool=True,\n",
+    "                   activation=tf.nn.relu):\n",
+    "    \"\"\"{Conv -> BN -> RELU}x2 -> {Pool, optional}\n",
+    "\n",
+    "    Args:\n",
+    "        input_ (4-D Tensor): (batch_size, H, W, C)\n",
+    "        n_filters (list): number of filters [int, int]\n",
+    "        training (1-D Tensor): Boolean Tensor\n",
+    "        name (str): name postfix\n",
+    "        pool (bool): If True, MaxPool2D\n",
+    "        activation: Activaion functions\n",
+    "\n",
+    "    Returns:\n",
+    "        net: output of the Convolution operations\n",
+    "        pool (optional): output of the max pooling operations\n",
+    "    \"\"\"\n",
+    "    net = input_\n",
+    "\n",
+    "    with tf.variable_scope(\"layer{}\".format(name)):\n",
+    "        for i, F in enumerate(n_filters):\n",
+    "            net = tf.layers.conv2d(\n",
+    "                net,\n",
+    "                F, (3, 3),\n",
+    "                activation=None,\n",
+    "                padding='same',\n",
+    "                #kernel_regularizer=tf.contrib.layers.l2_regularizer(flags.reg),\n",
+    "                name=\"conv_{}\".format(i + 1))\n",
+    "            net = tf.layers.batch_normalization(\n",
+    "                net, training=training, name=\"bn_{}\".format(i + 1))\n",
+    "            net = activation(net, name=\"relu{}_{}\".format(name, i + 1))\n",
+    "\n",
+    "        if pool is False:\n",
+    "            return net\n",
+    "\n",
+    "        pool = tf.layers.max_pooling2d(\n",
+    "            net, (2, 2), strides=(2, 2), name=\"pool_{}\".format(name))\n",
+    "\n",
+    "        return net, pool\n",
+    "\n",
+    "\n",
+    "def upconv_concat(inputA, input_B, n_filter, flags, name):\n",
+    "    \"\"\"Upsample `inputA` and concat with `input_B`\n",
+    "\n",
+    "    Args:\n",
+    "        input_A (4-D Tensor): (N, H, W, C)\n",
+    "        input_B (4-D Tensor): (N, 2*H, 2*H, C2)\n",
+    "        name (str): name of the concat operation\n",
+    "\n",
+    "    Returns:\n",
+    "        output (4-D Tensor): (N, 2*H, 2*W, C + C2)\n",
+    "    \"\"\"\n",
+    "    up_conv = upconv_2D(inputA, n_filter, flags, name)\n",
+    "\n",
+    "    return tf.concat(\n",
+    "        [up_conv, input_B], axis=-1, name=\"concat_{}\".format(name))\n",
+    "\n",
+    "\n",
+    "def upconv_2D(tensor, n_filter, flags, name):\n",
+    "    \"\"\"Up Convolution `tensor` by 2 times\n",
+    "\n",
+    "    Args:\n",
+    "        tensor (4-D Tensor): (N, H, W, C)\n",
+    "        n_filter (int): Filter Size\n",
+    "        name (str): name of upsampling operations\n",
+    "\n",
+    "    Returns:\n",
+    "        output (4-D Tensor): (N, 2 * H, 2 * W, C)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return tf.layers.conv2d_transpose(\n",
+    "        tensor,\n",
+    "        filters=n_filter,\n",
+    "        kernel_size=2,\n",
+    "        strides=2,\n",
+    "        #kernel_regularizer=tf.contrib.layers.l2_regularizer(flags.reg),\n",
+    "        name=\"upsample_{}\".format(name))\n",
+    "\n",
+    "\n",
+    "def make_unet(X, training, flags=None):\n",
+    "    \"\"\"Build a U-Net architecture\n",
+    "\n",
+    "    Args:\n",
+    "        X (4-D Tensor): (N, H, W, C)\n",
+    "        training (1-D Tensor): Boolean Tensor is required for batchnormalization layers\n",
+    "\n",
+    "    Returns:\n",
+    "        output (4-D Tensor): (N, H, W, C)\n",
+    "            Same shape as the `input` tensor\n",
+    "\n",
+    "    Notes:\n",
+    "        U-Net: Convolutional Networks for Biomedical Image Segmentation\n",
+    "        https://arxiv.org/abs/1505.04597\n",
+    "    \"\"\"\n",
+    "    net = X / 127.5 - 1\n",
+    "    conv1, pool1 = conv_conv_pool(net, [8, 8], training, flags, name=1)\n",
+    "    conv2, pool2 = conv_conv_pool(pool1, [16, 16], training, flags, name=2)\n",
+    "    conv3, pool3 = conv_conv_pool(pool2, [32, 32], training, flags, name=3)\n",
+    "    conv4, pool4 = conv_conv_pool(pool3, [64, 64], training, flags, name=4)\n",
+    "    conv5 = conv_conv_pool(\n",
+    "        pool4, [128, 128], training, flags, name=5, pool=False)\n",
+    "\n",
+    "    up6 = upconv_concat(conv5, conv4, 64, flags, name=6)\n",
+    "    conv6 = conv_conv_pool(up6, [64, 64], training, flags, name=6, pool=False)\n",
+    "\n",
+    "    up7 = upconv_concat(conv6, conv3, 32, flags, name=7)\n",
+    "    conv7 = conv_conv_pool(up7, [32, 32], training, flags, name=7, pool=False)\n",
+    "\n",
+    "    up8 = upconv_concat(conv7, conv2, 16, flags, name=8)\n",
+    "    conv8 = conv_conv_pool(up8, [16, 16], training, flags, name=8, pool=False)\n",
+    "\n",
+    "    up9 = upconv_concat(conv8, conv1, 8, flags, name=9)\n",
+    "    conv9 = conv_conv_pool(up9, [8, 8], training, flags, name=9, pool=False)\n",
+    "\n",
+    "    return tf.layers.conv2d(\n",
+    "        conv9,\n",
+    "        2, (1, 1),\n",
+    "        name='final',\n",
+    "        #activation=tf.nn.sigmoid,\n",
+    "        padding='same')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -192,38 +328,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unet_output = unet_kkweon.make_unet(x, training)"
+    "out_logits = make_unet(x, training)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sigmoid_out = tf.nn.sigmoid(unet_output)"
+    "out = tf.nn.sigmoid(out_logits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "loss = tf.reduce_mean(tf.losses.sigmoid_cross_entropy(target, unet_output))"
+    "loss = tf.reduce_mean(tf.losses.sigmoid_cross_entropy(target, out_logits))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -246,12 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "gr = tf.get_default_graph()\n",
+    "\n",
+    "writer = tf.summary.FileWriter(\"../tf_logs\", gr)"
+   ]
   },
   {
    "cell_type": "code",
@@ -272,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def mirror(im):\n",
@@ -327,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p = au.Pipeline()\n",
@@ -464,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": 485,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val_im = val_data[0]\n",
@@ -474,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": 486,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mask = prediction[0][:val_im.shape[0],:val_im.shape[1],:1]"
@@ -853,7 +1001,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gr = tf.get_default_graph()\n",
