smooth mask resizer

--- a/notebooks/investigator.ipynb
+++ b/notebooks/investigator.ipynb
@@ -811,6 +811,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def iou_at_thresholds(target_mask, pred_mask, thresholds=np.arange(0.5,1,0.05)):\n",
+    "    '''Returns True if IoU is greater than the thresholds.'''\n",
+    "    intersection = np.logical_and(target_mask, pred_mask)\n",
+    "    union = np.logical_or(target_mask, pred_mask)\n",
+    "    iou = np.sum(intersection > 0) / np.sum(union > 0)\n",
+    "    return iou > thresholds\n",
+    "\n",
+    "def calculate_average_precision(target_masks, pred_masks, thresholds=np.arange(0.5,1,0.05)):\n",
+    "    '''Calculates the average precision over a range of thresholds for one observation (with a single class).'''\n",
+    "    iou_tensor = np.zeros([len(thresholds), len(pred_masks), len(target_masks)])\n",
+    "\n",
+    "    for i, p_mask in enumerate(pred_masks):\n",
+    "        for j, t_mask in enumerate(target_masks):\n",
+    "            iou_tensor[:, i, j] = iou_at_thresholds(t_mask, p_mask, thresholds)\n",
+    "\n",
+    "    TP = np.sum((np.sum(iou_tensor, axis=2) == 1), axis=1)\n",
+    "    FP = np.sum((np.sum(iou_tensor, axis=1) == 0), axis=1)\n",
+    "    FN = np.sum((np.sum(iou_tensor, axis=2) == 0), axis=1)\n",
+    "\n",
+    "    precision = TP / (TP + FP + FN)\n",
+    "\n",
+    "    return np.mean(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ANSW"
    ]
   },
